angular-app/client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp-deployment
spec:
  selector:
    matchLabels:
      app: angularapp-pod
  template:
    metadata:
      labels:
        app: angularapp-pod
    spec:
      containers:
      - name: angularapp-container
        image: rluka996/frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angularapp-service
spec:
  selector:
    app: angularapp-pod
  ports:
  - port: 8082
    targetPort: 80
  type: LoadBalancer
